Update Reserve Trip Function

--- a/CarPooling/appsettings.Development.json
+++ b/CarPooling/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=.;Initial Catalog=YALLA_GO;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "JwtToken": {
+    "SecretKey": "newP@s$w0rdKhaledSayed"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
