Fix azure catched bugs

--- a/CarPooling/appsettings.json
+++ b/CarPooling/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=tcp:carpooling20190608011239dbserver.database.windows.net,1433;Initial Catalog=CarPooling20190608011239_db;User Id=sqluser@carpooling20190608011239dbserver;Password=Test@Test10"
+  },
+  "JwtToken": {
+    "SecretKey": "newP@s$w0rdKhaledSayed"
+  }
 }
